Issue 465 Prevent SVG logo in footer overflowing parent container

--- a/themes/elmcip/css/media-elements.css
+++ b/themes/elmcip/css/media-elements.css
@@ -47,6 +47,6 @@ video {
   height: 100%;
 }
 
-.footer-logo img {
-  padding: 0 80px;
+#block-elmcip-setup-logo .content {
+  margin: 0 80px;
 }
